--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Build sources
 on:
   push:
     branches:
-    - main
+    - new-asura
     paths:
     - 'src/**'
     - '.github/workflows/build.yaml'
